- Chnaged dinner html from index to dinners.html - Updated .name in header css to avoid underlines and wrong colour - Added html links to ensure smooth cross referencing between pages

--- a/header-footer.css
+++ b/header-footer.css
@@ -13,6 +13,12 @@ header {
   text-align: center;
   font-size: 2em;
   font-weight: bold;
+  text-decoration: none;
+  color: black;
+}
+
+.name:hover {
+  color: white;
 }
 
 nav {
@@ -21,13 +27,13 @@ nav {
   justify-content: space-around;
 }
 
-a {
+nav a {
   text-decoration: none;
   font-size: 1.25em;
   color: black;
 }
 
-a:hover {
+nav a:hover {
   color: white;
 }
 
